K8s/tier-network-policies/backend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-tier-network-policy
spec:
  podSelector:
    matchLabels:
      tier: backend 
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          tier: frontend 

  - from:
    - podSelector:
        matchLabels:
          tier: backend 

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
      
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53

  - to:
      - podSelector:
          matchLabels:
            tier: database 

  - to:
      - podSelector:
          matchLabels:
            tier: message-queue

  - to:
      - podSelector:
          matchLabels:
            tier: backend
